Docs integration test (#111)
* fixed: doc sync stigger only set to haraldng/omnipaxos

* init: examples/tutorial

* update: use logging and toml_config feature

* update: use persistent storage

* update: use serde feature

* *

* add fail recover

* Added abort_flag in op_server

* Add temp files but ignored by git

* Update gitignore

* Exclude temp files

* init: examples/tutorial

* update: use logging and toml_config feature

* update: use persistent storage

* update: use serde feature

* *

* add fail recover

* Added abort_flag in op_server

* Add temp files but ignored by git

* Update gitignore

* Exclude temp files

* Build integration_test basic structure and finished creating node test

* Finished kv_store test

* *

* Finished integration test

* Made import clear

* Delete bin files in tests

* Updated gitignore to ignore bin files in omnipaxos/tests/

* Changed code structure of docs_integration_test.rs to make the code examples separated into different function

* Update docs/omnipaxos/communication.md

* Formatting and instructions

---------

Co-authored-by: Harald Ng <harald.ng@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /log
 Cargo.lock
 omnipaxos_storage/storage
+/omnipaxos/tests/config/storage/
 
 # IntelliJ
 *.iml
@@ -11,3 +12,4 @@ omnipaxos_storage/storage
 docs/.DS_Store
 .DS_Store
 */.idea/*
+
