--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -15,18 +15,11 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 omnipaxos = { path = "../omnipaxos", features = ["serde"] }
-sled = { version = "0.34.7", optional = true }
+sled = { version = "0.34.7" }
 serde = { version = "1.0", features = ["derive"] }
 commitlog = "0.2.0"
 bincode = "1.3.3"
 zerocopy = "0.6.1"
-
-[dev-dependencies]
-
-[features]
-sled = ["dep:sled"]
-
-default = ["sled"]
 
 [profile.release]
 lto = true
