--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "omnipaxos_storage"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Harald Ng <hng@kth.se>"]
 edition = "2021"
 description = "Storage implementations for OmniPaxos."
@@ -14,21 +14,12 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-omnipaxos = { version = "0.2.0", path = "../omnipaxos", features = ["serde"] }
-rocksdb = { version = "0.18.0", optional = true }
-sled = { version = "0.34.7", optional = true }
+omnipaxos = { version = "0.2.1", path = "../omnipaxos", features = ["serde"] }
+sled = { version = "0.34.7" }
 serde = { version = "1.0", features = ["derive"] }
 commitlog = "0.2.0"
-bincode = "1.2.1"
+bincode = "1.3.3"
 zerocopy = "0.6.1"
-
-[dev-dependencies]
-
-[features]
-sled = ["dep:sled"]
-rocksdb = ["dep:rocksdb"]
-
-default = ["sled"]
 
 [profile.release]
 lto = true
