--- a/examples/ui/Cargo.toml
+++ b/examples/ui/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ui"
 version = "0.1.0"
 edition = "2021"
+default-run = "ui"
 
 [dependencies]
 omnipaxos = { path = "../../omnipaxos", features = ["macros", "ui"] }
