--- a/examples/kv_store/Cargo.toml
+++ b/examples/kv_store/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1.0", features = ["derive"] }
 
 [features]
 derive_entry = []
+# To run the program with the UI, use `cargo run --features with_omnipaxos_ui`
+with_omnipaxos_ui = ["omnipaxos/ui"]
