--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -20,8 +20,7 @@ slog-async = { version = "2.7.0", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 toml = { version = "0.7.3", optional = true }
 omnipaxos_macros = { version = "0.1.2", optional = true }
-crossterm = { version = "0.26.1", optional = true }
-ratatui = { version = "0.22.0", optional = true }
+omnipaxos_ui = { path = "../omnipaxos_ui", optional = true}
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
@@ -40,7 +39,7 @@ logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
 default = ["batch_accept"]
 macros = ["omnipaxos_macros"]
-ui = ["dep:crossterm", "dep:ratatui"]
+ui = ["dep:omnipaxos_ui"]
 
 [profile.release]
 lto = true
