--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -64,3 +64,7 @@ storage_type = { type = "Broken" }
 [sync_test]
 wait_timeout_ms = 5000
 num_nodes = 3
+
+[ui_test]
+wait_timeout_ms = 5000
+num_nodes = 3
