--- a/examples/kv_store/Cargo.toml
+++ b/examples/kv_store/Cargo.toml
@@ -2,7 +2,7 @@
 name = "kv_store"
 version = "0.1.0"
 edition = "2021"
-
+default-run = "kv_store"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
