--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -39,7 +39,7 @@ logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
 default = ["batch_accept"]
 macros = ["omnipaxos_macros"]
-ui = ["dep:omnipaxos_ui"]
+ui = ["dep:omnipaxos_ui", "logging"]
 
 [profile.release]
 lto = true
