--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -21,7 +21,9 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 toml = { version = "0.7.3", optional = true }
 omnipaxos_macros = { path = "../omnipaxos_macros", optional = true }
 lru = { version = "0.11.0", optional = true }
+#schnellru = { version = "0.2.1", optional = true }
 num-traits = { version = "0.2.16", optional = true }
+lfu = { git = "https://github.com/haraldng/lfu-cache", optional = true, features = ["serde"]}   # TODO turn off serde by default
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
@@ -40,7 +42,7 @@ logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
 default = ["batch_accept", "macros"]
 macros = ["omnipaxos_macros"]
-unicache = ["lru", "num-traits"]
+unicache = ["lru", "num-traits", "lfu"]
 
 [profile.release]
 lto = true
