Moved dashboard to separate bin and rollback kv_store to old version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "omnipaxos_macros",
     "omnipaxos_ui",
     "examples/kv_store",
+    "examples/dashboard",
 ]
 
 [profile.release]
