--- a/examples/dashboard/Cargo.toml
+++ b/examples/dashboard/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "kv_store"
+name = "dashboard"
 version = "0.1.0"
 edition = "2021"
-default-run = "kv_store"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,6 +10,5 @@ omnipaxos = { path = "../../omnipaxos", features = ["macros"] }
 omnipaxos_storage = { path = "../../omnipaxos_storage"}
 tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
+omnipaxos_ui = { path = "../../omnipaxos_ui" }
 
-[features]
-derive_entry = []
