--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ members = [
     "omnipaxos",
     "omnipaxos_storage",
     "omnipaxos_macros",
+    "omnipaxos_ui",
     "examples/kv_store",
+    "examples/dashboard",
 ]
 
 [profile.release]
