--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -21,9 +21,8 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 toml = { version = "0.7.3", optional = true }
 omnipaxos_macros = { path = "../omnipaxos_macros", optional = true }
 lru = { version = "0.11.0", optional = true }
-#schnellru = { version = "0.2.1", optional = true }
 num-traits = { version = "0.2.16", optional = true }
-lfu = { git = "https://github.com/haraldng/lfu-cache", optional = true, features = ["serde"]}   # TODO turn off serde by default
+lfu = { git = "https://github.com/haraldng/lfu-cache", optional = true, features = ["serde"]}   # TODO turn off serde by default?
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
