Fix deserialize resend_timeout and test unicache in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --verbose --features default,logging,toml_config,unicache --no-fail-fast
+          args: -p omnipaxos --verbose --features default,logging,toml_config,unicache --no-fail-fast
 
   format:
     name: cargo fmt
