--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -46,12 +46,12 @@ num_nodes = 3
 num_proposals = 100
 storage_type = { type = "Persistent" }
 
-[gc_test]
+[trim_test]
 wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 3
 num_proposals = 2000
-gc_idx = 1000
+trim_idx = 1000
 storage_type = { type = "Memory" }
 
 [batching_test]
