--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -19,7 +19,10 @@ slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 toml = { version = "0.7.3", optional = true }
-omnipaxos_macros = { version = "0.1.2", optional = true }
+omnipaxos_macros = { path = "../omnipaxos_macros", optional = true }
+lru = { version = "0.11.0", optional = true }
+num-traits = { version = "0.2.16", optional = true }
+lfu = { git = "https://github.com/haraldng/lfu-cache", optional = true, features = ["serde"]}   # TODO turn off serde by default?
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
@@ -36,8 +39,10 @@ rand = "0.8.4"
 batch_accept = []
 logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
-default = ["batch_accept"]
 macros = ["omnipaxos_macros"]
+unicache = ["lru", "num-traits", "lfu"]
+
+default = ["batch_accept", "macros"]
 
 [profile.release]
 lto = true
