--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -12,8 +12,16 @@ num_nodes = 5
 num_proposals = 2000
 storage_type = { type = "Memory" }
 
+[unicache_test]
+wait_timeout_ms = 3000
+num_threads = 8
+num_nodes = 5
+num_proposals = 1000
+num_iterations = 2
+storage_type = { type = "Memory" }
+
 [flexible_quorum_test]
-wait_timeout_ms = 5000
+wait_timeout_ms = 8000
 num_threads = 8
 num_nodes = 8
 flexible_quorum = [6, 3]
@@ -38,12 +46,12 @@ num_nodes = 3
 num_proposals = 100
 storage_type = { type = "Persistent" }
 
-[gc_test]
+[trim_test]
 wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 3
 num_proposals = 2000
-gc_idx = 1000
+trim_idx = 1000
 storage_type = { type = "Memory" }
 
 [batching_test]
@@ -62,6 +70,5 @@ num_nodes = 3
 storage_type = { type = "Broken" }
 
 [sync_test]
-wait_timeout_ms = 5000
+wait_timeout_ms = 8000
 num_nodes = 3
-
