--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -20,6 +20,6 @@ serde = { version = "1.0", features = ["derive"] }
 commitlog = "0.2.0"
 bincode = "1.3.3"
 zerocopy = "0.6.1"
-
+rocksdb = "0.21.0"
 [profile.release]
 lto = true
