--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "omnipaxos"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Harald Ng <hng@kth.se>"]
 edition = "2021"
 description = "A distributed log library written in Rust"
@@ -19,10 +19,10 @@ slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 toml = { version = "0.7.3", optional = true }
-omnipaxos_macros = { path = "../omnipaxos_macros", optional = true }
+omnipaxos_macros = { version = "0.1.3", path = "../omnipaxos_macros", optional = true }
 lru = { version = "0.11.0", optional = true }
 num-traits = { version = "0.2.16", optional = true }
-lfu = { git = "https://github.com/haraldng/lfu-cache", optional = true, features = ["serde"]}   # TODO turn off serde by default?
+linked_hash_set = { version = "0.1.4", optional = true }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
@@ -34,13 +34,14 @@ sled = "0.34.7"
 tempfile = "3.3.0"
 serial_test = "0.5.1"
 rand = "0.8.4"
+serde_json = "1.0"
 
 [features]
 batch_accept = []
 logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
 macros = ["omnipaxos_macros"]
-unicache = ["lru", "num-traits", "lfu"]
+unicache = ["lru", "num-traits", "linked_hash_set"]
 
 default = ["batch_accept", "macros"]
 
