Atomic storage API (#121)
* Removes read+write storage functions.

* Storage refers to entries consistently post and pre trim.

* Make storage API and Option<Ballot> returns consistent.

* PersistentStorage now uses RocksDB.

* Fixed decided_idx off by 1 error.

* Switch real_log_len to accepted_idx in InternalStorage.

* Cleaned up index usize and NodeId types.

* cargo fmt

* More type cleanup.

* Adds write_batch API to storage. Sequence Paxos almost fully switched to write batches. Removes batch_accept feature flag.

* Combined buffered StorageOps and batched entries solution. Flushes entries on Decide messages.

* Reintroduce batching code from master. Minimize transaction code to syncing, trimming, and snapshotting.

* Handle AcceptDecide recovery-proof order of operations.

* Unifies leader and follower syncing. Adds atomic log sync to
InternalStorage. Hides unicache types in structs.

* Fix Value debug trait. Cargo fmt.

* Addresses PR comments.

* Follower set_decided_idx changes. Updated comments/docs.

* Separates Storage and InternalStorage.

* Fixes batching test.

* Gets compilation working with different feature flags. Updates book.

* Creates storage module. Updates docs/book. Clippy/fmt cleanup.

* PersistentStorage improvements.

* Fixes prefix bug and clarifies Storage index bounds.

* Fixes initial accetped_round bug.

--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -15,11 +15,9 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 omnipaxos = { version = "0.2.2", path = "../omnipaxos", features = ["serde"] }
-sled = { version = "0.34.7" }
 serde = { version = "1.0", features = ["derive"] }
-commitlog = "0.2.0"
 bincode = "1.3.3"
 zerocopy = "0.6.1"
-
+rocksdb = "0.21.0"
 [profile.release]
 lto = true
