--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -29,21 +29,18 @@ kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", feature
 omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true } 
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.7.3"
-commitlog = "0.2.0"
-sled = "0.34.7"
 tempfile = "3.3.0"
 serial_test = "0.5.1"
 rand = "0.8.4"
 serde_json = "1.0"
 
 [features]
-batch_accept = []
 logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
 macros = ["omnipaxos_macros"]
 unicache = ["lru", "num-traits", "linked_hash_set"]
 
-default = ["batch_accept", "macros"]
+default = ["macros"]
 
 [profile.release]
 lto = true
