--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -56,13 +56,10 @@ storage_type = { type = "Memory" }
 
 [batching_test]
 wait_timeout_ms = 3000
-num_thread = 8
-num_node = 3
-batch_siz = 31
-election_timeout_m = 50
-increment_dela = 2
-num_proposal = 310
-gc_id = 1000
+num_threads = 8
+num_nodes = 3
+batch_size = 31
+num_proposals = 310
 storage_type = { type = "Persistent" }
 
 [atomic_storage_test]
