--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -23,6 +23,7 @@ omnipaxos_macros = { version = "0.1.3", path = "../omnipaxos_macros", optional =
 lru = { version = "0.11.0", optional = true }
 num-traits = { version = "0.2.16", optional = true }
 linked_hash_set = { version = "0.1.4", optional = true }
+#nohash-hasher = "0.2.0"
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
@@ -39,6 +40,8 @@ logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
 macros = ["omnipaxos_macros"]
 unicache = ["lru", "num-traits", "linked_hash_set"]
+fastpaxos = []
+spaxos = []
 
 default = ["macros"]
 
