--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -18,6 +18,6 @@ omnipaxos = { version = "0.2.2", path = "../omnipaxos", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
 zerocopy = "0.6.1"
-rocksdb = "0.21.0"
+#rocksdb = "0.21.0"
 [profile.release]
 lto = true
