--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -10,6 +10,7 @@ wait_timeout_ms = 6000
 num_threads = 8
 num_nodes = 5
 num_proposals = 2000
+batch_size = 1
 storage_type = { type = "Memory" }
 
 [unicache_test]
@@ -60,7 +61,7 @@ num_threads = 8
 num_nodes = 3
 batch_size = 31
 num_proposals = 310
-storage_type = { type = "Persistent" }
+storage_type = { type = "Memory" }
 
 [atomic_storage_test]
 num_nodes = 3
