--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -15,9 +15,12 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 omnipaxos = { version = "0.2.2", path = "../omnipaxos", features = ["serde"] }
-serde = { version = "1.0", features = ["derive"] }
-bincode = "1.3.3"
-zerocopy = "0.6.1"
-rocksdb = "0.21.0"
+serde = { version = "1.0", features = ["derive"], optional= true }
+bincode = { version = "1.3.3", optional = true }
+zerocopy = { version = "0.6.1", optional = true }
+rocksdb = { version = "0.21.0", optional = true }
 [profile.release]
 lto = true
+
+[features]
+persistent_storage = ["dep:rocksdb", "dep:serde", "dep:bincode", "dep:zerocopy"]
